# web-tutorial

./: .gitignore  BIBLIOGRAPHY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GLOSSARY.md  LICENSE.md  Makefile  README.md  bibliography.md  common.mk  config.json  pyproject.toml  requirements.txt
00_intro/: index.md
01_intro/: index.md  slides.md
01_json/: index.md  server_err.py  server_routes.py
02_db/: Makefile  index.md  model.py  models_sql.py  server.py  server_sql.py  test_basic.py  util.py
02_http/: index.md
03_db/: index.md
03_html/: index.md
03_json/: Makefile  fetch.py  server_err.py  server_func.py
03_server/: Makefile  index.md  server_err.py  server_routes.py
03_test/: fixtures.py  index.md  server.py  test_combined.py  test_db.py
04_db/: Makefile  index.md  models_pika.py
04_html/: index.md  models.py  server.py
04_test/: Makefile
05_forms/: index.md
05_html/: server.py
05_test/: index.md
06_forms/: Makefile  index.md
06_html/: Makefile  index.md  models.py  views.py
06_js/: index.md
07_forms/: Makefile  index.md  inserting.py  models.py  server.py  views.py
07_js/: index.md
08_js/: await.js  index.md  promises.js
09_browser/: Makefile  async_fetch.js  index.md  log_defer.html  log_on_load.html  server.py  show_headings.html  show_headings_onload.html
09_htmx/: index.md
10_htmx/: Makefile  index.md  models.py  server.py
11_migrate/: Makefile  index.md  migrate.py
11_perm/: Makefile  add_roles_permissions.sql  db_fixture.py  exploration.py  index.md  test_permission.py
12_migrate/: Makefile  index.md  lab.db
12_perm/: Makefile  index.md  migrate.py
13_auth/: Makefile  index.md  server.py
14_crypt/: Makefile  index.md  server_secure.py  server_simple.py  views.py
14_test/: index.md
15_test/: Makefile  index.md  server.py  test_login.py
16_access/: index.md
16_graphics/: colors.js  index.md
17_gui/: index.md
17_intl/: Makefile  index.md  migrate.py
18_access/: index.md
(+755 files in other folders)
